--- a/style.css
+++ b/style.css
@@ -48,3 +48,21 @@
     background:#5cd533;
     margin:0 auto;
 }
+
+.date-text{
+    margin:0 auto;
+    text-align: center;
+    font-size: 30px;
+}
+
+.buttons {
+    height: 25px;
+  width: 25px;
+  background-color: grey;
+  border:none;
+  color: white;
+  font-size: 20px;
+  border-radius: 50%;
+  padding:5px 10px;
+  
+  }
