--- a/style.css
+++ b/style.css
@@ -66,3 +66,11 @@
   padding:5px 10px;
   
   }
+
+  .plus-button {
+    display: none;
+  }
+      
+  .one:hover + .plus-button {
+    display: block;
+  }
